--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     "node": "10"
   },
   "dependencies": {
+    "busboy": "^0.3.1",
     "express": "^4.17.1",
     "firebase": "^7.7.0",
     "firebase-admin": "^8.6.0",
